Fix shot fired style to not stretch table content

--- a/src/style.css
+++ b/src/style.css
@@ -33,13 +33,19 @@ table, td, th {
 }
 
 table {
-	text-align: center;
-}
-table {
-	width: 100%;
+	display: flex;
 	border-collapse: collapse;
-	height: 400px;
+	height: 450px;
 	width: 450px;
+	text-align: center;
+	display: inline-table;
+	border: none; 
+	word-wrap:break-word;
+	overflow:scroll;
+}
+td {
+	width: 40px;
+	height: 20px;
 }
 #footer {
 	padding-top: 50px;
